consisten hashing implemented

--- a/LoadBalancer/src/main/resources/application.properties
+++ b/LoadBalancer/src/main/resources/application.properties
@@ -4,3 +4,6 @@ backend.server.id[2]=server3
 backend.server.address[0]=http://localhost:8081
 backend.server.address[1]=http://localhost:8082
 backend.server.address[2]=http://localhost:8083
+backend.server.numberOfVirtualNodes=5
+strategy.name=ConsistentHashing
+#strategy.name=RoundRobin
